k8s/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perahub-gateway-app
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: perahub-gateway-app
spec:
  tls:
    - hosts:
      - perahub.com.ph
      secretName: perahub-tls-secrets
  rules:
  - host: dev.payments.perahub.com.ph
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            # kong api gateway for payments
            name: payment-gateway-service
            port:
              number: 4000
  - host: dev.cico.perahub.com.ph
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            # kong api gateway for cico
            name: cico-gateway-service
            port:
              number: 5000
